Adding sample run test case