@@ -13,7 +13,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>org.wso2.carbon.cloud.test.scenarios</artifactId>
     <version>2.2.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <name>WSO2 Cloud - Integration - Integration Tests - Test Scenarios</name>
 
     <dependencies>
@@ -22,5 +22,66 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.cloud</groupId>
+            <artifactId>org.wso2.carbon.cloud.integration.test.utils</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>xalan</groupId>
+            <artifactId>xalan</artifactId>
+            <version>2.7.1</version>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12.4</version>
+                <inherited>false</inherited>
+                <configuration>
+                    <!--argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m
+                         -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE
+                         -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006 -Dhttps.protocols=TLSv1,SSLv3
+                     </argLine-->
+                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Dhttps.protocols=TLSv1,SSLv3</argLine>
+                    <testFailureIgnore>false</testFailureIgnore>
+                    <disableXmlReport>false</disableXmlReport>
+                    <parallel>false</parallel>
+                    <!--<skipTests>${skipPlatformTests}</skipTests>-->
+                    <skipTests>${skipTests}</skipTests>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <systemProperties>
+                        <property>
+                            <name>framework.resource.location</name>
+                            <value>
+                                ${basedir}/src/test/resources/
+                            </value>
+                        </property>
+                        <property>
+                            <name>usedefaultlisteners</name>
+                            <value>false</value>
+                        </property>
+                    </systemProperties>
+                    <workingDirectory>${basedir}/target</workingDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
